Primera version del proyecto lista.